objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>CRM_Broker_Activation_Date__c</fullName>
        <label>Broker Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_CAPSI_Username__c</fullName>
        <label>CAPSI Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_CMS_ID__c</fullName>
        <label>CMS ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Compliance_Training_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Training Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Category__c</fullName>
        <formula>TEXT(Contact.CRM_Mtg_Category__c)</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Police_Check_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Police Check Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_System_Deactivation_Reason__c</fullName>
        <label>System Deactivation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Blacklisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated - Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated - Breach of Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated - De-registration/Death of Directors/Shareholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated - Disqualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated - Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated - Non performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training evidence of PC not received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - no adverse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_System_Role__c</fullName>
        <label>System Role</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin &amp; User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <validationRules>
        <fullName>CRM_Status_Reason_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(CRM_Status__c,&quot;Inactive&quot;) &amp;&amp; ISPICKVAL(CRM_System_Deactivation_Reason__c,&quot;&quot;) , true,false)</errorConditionFormula>
        <errorDisplayField>CRM_System_Deactivation_Reason__c</errorDisplayField>
        <errorMessage>Reason is required for this status</errorMessage>
    </validationRules>
</CustomObject>